--- a/quiz.html
+++ b/quiz.html
@@ -5,14 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
+        <h1>KnowledgeMe</h1>
+        <hr>
         <nav></nav>
     </header>
 
     <main>
-
+        <section class="page-banner-container">
+            <h2 class="banner-title">test your Knowledge</h2>
+            <img class="page-banner" src="images/quiz.jpg" alt="Quiz">
+        </section>
     </main>
 
     <footer>
