--- a/quiz.html
+++ b/quiz.html
@@ -29,10 +29,10 @@
 
     <main>              
         <card-item
-        imgUrl="../images/premier-league/logo/arsenal-logo.png"
-        title="Arsenal"
-        city="London"
+        imgUrl="arsenal-logo.png"
+        imgAlt="Arsenal Logo"
         button="Mer Info"
+        club="Arsenal"
         ></card>
     </main>
 
