--- a/index.html
+++ b/index.html
@@ -29,36 +29,11 @@
     </header>
 
     <main id="main-content-container">
-
-        <div class="home-banner"></div>
-
-        <tab></tab>
-
+        <banner-img
+            imgUrl = "premier-league-banner.jpeg"
+        ></banner-img>
+        <content-tabs></content-tabs>
         <section class="content-header">
-            <section class="content-hero">
-                <div class="premier-league-clubs">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                    <img class="club-logo" src="/images/premier-league/logo/arsenal-logo.png" alt="">
-                </div>
-            </section>
 
             <section class="content-filters">
                 <select name="filter-select" id="filter-select">
@@ -79,6 +54,7 @@
     </main>
       
 
+    <script src="scripts/components/Banner.js"></script>
     <script src="scripts/components/Tabs.js"></script>
 </body>
 </html>
