--- a/quiz.html
+++ b/quiz.html
@@ -27,7 +27,12 @@
         </nav>
     </header>
 
-    <main>              
+    <main>
+
+        <banner-img
+            imgUrl = "quiz.jpg"
+        ></banner-img>
+
         <card-item
         imgUrl="arsenal-logo.png"
         imgAlt="Arsenal Logo"
@@ -40,5 +45,6 @@
         
     </footer>
     <script src="scripts/components/Card.js"></script>
+    <script src="scripts/components/Banner.js"></script>
 </body>
 </html>
