--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     </header>
 
     <main id="main-content-container">
-        <banner-img
-            imgUrl = "premier-league-banner.jpeg"
-        ></banner-img>
+        <section class="banner-container">
+            <banner-img
+                imgUrl = "premier-league-banner.jpeg"
+            ></banner-img>
+        </section>
         <content-tabs></content-tabs>
         <section class="content-header">
 
