--- a/quiz.html
+++ b/quiz.html
@@ -29,16 +29,20 @@
 
     <main>
 
-        <banner-img
-            imgUrl = "quiz.jpg"
-        ></banner-img>
+        <section class="banner-container">
+            <div class="banner-overlay">
+                <h1 class="title">Test your knowledge</h1>
+                <h2 class="subtitle">Choose a theme and show us what you got!</h2>
+            </div>
+                <banner-img
+                imgUrl = "quiz.jpg"
+                ></banner-img>
+        </section>
 
-        <card-item
-        imgUrl="arsenal-logo.png"
-        imgAlt="Arsenal Logo"
-        button="Mer Info"
-        club="Arsenal"
-        ></card>
+
+            <content-tabs></content-tabs>
+
+
     </main>
 
     <footer>
@@ -46,5 +50,6 @@
     </footer>
     <script src="scripts/components/Card.js"></script>
     <script src="scripts/components/Banner.js"></script>
+    <script src="scripts/components/Tabs.js"></script>
 </body>
 </html>
