--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
             </section>
         </section>
 
+        <card-item
+            name="Arsenal"
+            imgUrl="arsenal-logo.png"
+            imgAlt="arsenal-logo"
+            background="rgb(56, 0, 58)"
+        ></card-item>
+
             <section class="content-output">
 
 
@@ -58,5 +65,6 @@
 
     <script src="scripts/components/Banner.js"></script>
     <script src="scripts/components/Tabs.js"></script>
+    <script src="scripts/components/Card.js"></script>
 </body>
 </html>
