--- a/athletes.html
+++ b/athletes.html
@@ -6,40 +6,30 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/main.css">
     <script defer type="module" src="/scripts/athletesInformation.js"></script>
+    <style>
+
+    </style>
 </head>
 <body>
     <header id="athletes-header">
-        <div>
-            <label for="">filtrer</label>
-            <select name="" id="atlhetes-header__filter">
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-            </select>
-        </div>
-        <h1 id="athletes-header__title">Norske Idrettstjerner</h1>
-        <input type="text" id="athletes-header__search" value="Søk">
+
     </header>
     <main>
+        <banner-img
+        imgUrl = "premier-league-banner.jpeg">
+        </banner-img>
+        <content-tabs>
+        </content-tabs>
         <section id="athletes-main">
-            <article id="athletes-card-container">
-                <div class="athletes-inner-card">
-                    <div id="athletes-card-front">
-                        <h3 id="athletes-card-front__genre">Friidrett</h3>
-                        <div id="athletes-img-container">
-                            <img src="/images/norwegian-athletes/warholm.jpeg" alt="Karsten warholm" id="athletes-image" >
-                        </div>
-                        <h3 id="athletes-card-front__name">Karsten</h3>
-                        <p id="athletes-card-front__age">28</p>
-                    </div>
-                    <div id="athletes-card-back">
-                        <h3 id="athletes-card-back__title">Karsten</h3>
-                        <p id="athletes-card-back__bio"></p>
-                    </div>
-                </div>
-            </article>
+            <card-item
+            name = "Karten Warholm"
+            imgUrl = "norwegian-athletes/warholm.jpeg"
+            imgAlt = "Karsten Warholm"
+            background = "rgb(34, 33, 169)">
+            </card-item>
         </section>
     </main>
+
+    <script src="scripts/components/Card.js"></script>
 </body>
 </html>
