--- a/quiz.html
+++ b/quiz.html
@@ -39,10 +39,32 @@
                 ></banner-img>
         </section>
 
-
             <content-tabs></content-tabs>
 
 
+            <section class="user-section">  
+                <h2 class="user-header">Fyll inn informasjon</h2>
+                <article class="input-container">
+                    <select name="gender-select" id="gender-select">
+                        <option value="Kvinne">Kvinne</option>
+                        <option value="Mann">Mann</option>
+                        <option value="Annet">Annet</option>
+                    <input type="text" id="name-input" placeholder="skriv inn navn..">
+                    <input type="button" id="name-btn" value="Bekreft">
+                </article>    
+                </select>
+            </section>
+            
+            <section class="quiz">
+                <article class="quiz__premier-league-article quiz__box">
+                    <h3 class="quiz__header">Test deg om Premier League</h3>
+                    <button class="PL-button quiz__btn">Start Quiz</button>
+                </article>
+                <article class="quiz__athletes-article quiz__box">
+                    <h3 class="quiz__header">Test dine Ferdigheter om Norske Idretsutøvere</h3>
+                    <button class="athlete-button quiz__btn">Start Quiz</button>
+                </article>
+            </section>
     </main>
 
     <footer>
