--- a/quiz.html
+++ b/quiz.html
@@ -50,17 +50,18 @@
                         <option value="Mann">Mann</option>
                         <option value="Annet">Annet</option>
                     <input type="text" id="name-input" placeholder="skriv inn navn..">
-                    <input type="button" id="name-btn" value="Bekreft">
+                    <input type="button" id="select-btn" value="Bekreft">
+                    <div class="user-output"></div>
                 </article>    
                 </select>
             </section>
             
             <section class="quiz">
-                <article class="quiz__premier-league-article quiz__box">
+                <article class="premier-league-article quiz__box">
                     <h3 class="quiz__header">Test deg om Premier League</h3>
                     <button class="PL-button quiz__btn">Start Quiz</button>
                 </article>
-                <article class="quiz__athletes-article quiz__box">
+                <article class="athletes-article quiz__box">
                     <h3 class="quiz__header">Test dine Ferdigheter om Norske Idretsutøvere</h3>
                     <button class="athlete-button quiz__btn">Start Quiz</button>
                 </article>
