quiz page update

--- a/quiz.html
+++ b/quiz.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <script defer src="/scripts/main-navbar.js"></script>
+    <script defer src="/scripts/quizStorage.js"></script>
 </head>
 <body>
     <header class="page-header">
@@ -49,11 +50,12 @@
                         <option value="Kvinne">Kvinne</option>
                         <option value="Mann">Mann</option>
                         <option value="Annet">Annet</option>
+                    </select>
                     <input type="text" id="name-input" placeholder="skriv inn navn..">
                     <input type="button" id="select-btn" value="Bekreft">
-                    <div class="user-output"></div>
-                </article>    
-                </select>
+                </article>  
+                <article class="user-output">
+                </article>  
             </section>
             
             <section class="quiz">
@@ -65,6 +67,9 @@
                     <h3 class="quiz__header">Test dine Ferdigheter om Norske Idretsutøvere</h3>
                     <button class="athlete-button quiz__btn">Start Quiz</button>
                 </article>
+                <div class="user-output">
+
+                </div>
             </section>
     </main>
 
