--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>KnowledgeMe | Home</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <script defer src="/scripts/main-navbar.js"></script>
@@ -32,15 +32,15 @@
         <section class="banner-container">
             
         </section>
-        <content-tabs></content-tabs>
-        <section class="content-header">
 
+        <content-tabs></content-tabs>
+
+        <section class="content-header">
             <section class="content-filters">
                 <select name="filter-select" id="filter-select">
-                    <option value="trophies">Velg</option>
+                    <option></option>
                 </select>
                 <input type="text" name="search-value" placeholder="Søk..">
-                <input type="button" name="search-btn" value="Søk">
             </section>
         </section>
 
