--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
         <section class="content-header">
             <section class="content-filters">
                 <select name="filter-select" id="filter-select">
-                    <option></option>
                 </select>
-                <input type="text" name="search-value" placeholder="Søk..">
+                <input type="text" id="search-value" placeholder="Søk..">
             </section>
         </section>
 
