--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <section class="content-filters">
                 <select name="filter-select" id="filter-select">
                 </select>
-                <input type="text" id="search-value" placeholder="Søk..">
+                    <input type="text" id="search-bar" placeholder="Søk etter utøver eller idrett..">
+                
             </section>
         </section>
 
