quiz page updated

--- a/quiz.html
+++ b/quiz.html
@@ -71,12 +71,14 @@
             </section>
             <section class="modal">
                 <article class="modal-content">
+                    <button class="close-btn"><i class="fas fa-times"></i></button>
                     <h2 class="modal-header"></h2>
                     <div class="question-content">
-
+                        <h2 class="question-header">Spørsmål 1</h2>
+                        <p class="question-output">Blabblalblallblabla</p>
                     </div>
-                    <button class="answer-no"></button>
-                    <button class="answer-yes"></button>
+                    <button class="answer-no quiz-btn">Valg 1</button>
+                    <button class="answer-yes quiz-btn">Valg 2</button>
                 </article>
             </section>
     </main>
