--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KnowledgeMe | Home</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <script defer src="/scripts/main-navbar.js"></script>
@@ -56,5 +56,6 @@
     <script src="scripts/components/Banner.js"></script>
     <script type="module" src="scripts/components/Tabs.js"></script>
     <script src="scripts/components/Card.js"></script>
+    <script src="scripts/animations.js"></script>
 </body>
 </html>
