--- a/quiz.html
+++ b/quiz.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <script defer src="/scripts/main-navbar.js"></script>
     <script defer src="/scripts/quizStorage.js"></script>
+    <script defer src="/scripts/components/Quiz.js"></script>
     <script defer type="module" src="/scripts/quizGenerator.js"></script>
     <script defer type="module" src="/scripts/questionsData.js"></script>
 </head>
