--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script defer src="/scripts/main-navbar.js"></script>
 </head>
 <body>
@@ -46,7 +47,6 @@
 
         
         <section class="content-output">
-                
         </section>
 
 
