--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     </header>
 
     <main id="main-content-container">
-        <section class="banner-container">
-            
+         <section class="banner-container">           
         </section>
 
         <content-tabs></content-tabs>
@@ -46,7 +45,7 @@
         </section>
 
         
-        <section class="content-output">
+        <section id="content-output">
         </section>
 
 
