--- a/quiz.html
+++ b/quiz.html
@@ -65,6 +65,7 @@
                 <article class="quiz__box">
                     <h3 class="quiz__header">Test dine ferdigheter</h3>
                     <button class="quiz__btn">Start Quiz</button>
+                    <button class="highscore-btn">Highscores</button>
                 </article>
             </section>
             <section class="modal">
