--- a/quiz.html
+++ b/quiz.html
@@ -64,7 +64,7 @@
             <section class="quiz">
                 <article class="quiz__box">
                     <h3 class="quiz__header">Test dine ferdigheter</h3>
-                    <button class="quiz__btn">Start Quiz</button>
+                    <button class="quiz__start-btn">Start Quiz</button>
                     <button class="highscore-btn">Highscores</button>
                 </article>
             </section>
