local storage update

--- a/quiz.html
+++ b/quiz.html
@@ -12,6 +12,7 @@
     <script defer src="/scripts/components/Quiz.js"></script>
     <script defer type="module" src="/scripts/quizGenerator.js"></script>
     <script defer type="module" src="/scripts/questionsData.js"></script>
+    <script defer src="/scripts/highscores.js"></script>
 </head>
 <body>
     <header class="page-header">
@@ -66,6 +67,7 @@
                     <h3 class="quiz__header">Test dine ferdigheter</h3>
                     <button class="quiz__start-btn">Start Quiz</button>
                     <button class="highscore-btn">Highscores</button>
+                    <div class="highscore-output"></div>
                 </article>
             </section>
             <section class="modal">
@@ -85,6 +87,7 @@
     <footer>
         
     </footer>
+    <script src="scripts/components/Card.js"></script>
     <script src="scripts/components/Banner.js"></script>
     <script defer type="module" src="scripts/components/Tabs.js"></script>
 </body>
