--- a/quiz.html
+++ b/quiz.html
@@ -67,6 +67,9 @@
                     <h3 class="quiz__header">Test dine ferdigheter</h3>
                     <button class="quiz__start-btn">Start Quiz</button>
                     <button class="highscore-btn">Highscores</button>
+                </article>
+                <article class="highscore-container">
+                    <i class="fas fa-crown"></i>
                     <div class="highscore-output"></div>
                 </article>
             </section>
