--- a/quiz.html
+++ b/quiz.html
@@ -73,7 +73,7 @@
                     <div class="highscore-output"></div>
                 </article>
             </section>
-            <section class="modal hidden">
+            <section class="modal">
                 <!--<article class="modal-content">-->
                 <!--<button class="close-btn"><i class="fas fa-times"></i></button>-->
                 <!--<h2 class="modal-header"></h2>-->
@@ -85,7 +85,6 @@
                 <!--    <button class="answer-btn quiz-btn">Valg 2</button>-->
                 <!--</article>-->
             </section>
-            <section class="results-modal"><h1>You won u bisgh</h1></section>
     </main>
 
     <footer>
