minor css tweaks

--- a/quiz.html
+++ b/quiz.html
@@ -36,8 +36,8 @@
         
         <section class="banner-container">
             <div class="banner-overlay">
-                <h1 class="title">Test your knowledge</h1>
-                <h2 class="subtitle">Choose a theme and show us what you got!</h2>
+                <h1 class="title">Test din kunnskap</h1>
+                <h2 class="subtitle">Velg et tema og vis oss hva du kan!</h2>
             </div>
             <banner-img
             imgUrl = "quiz.jpg"
