targeting last name in LS

--- a/quiz.html
+++ b/quiz.html
@@ -68,7 +68,7 @@
                     <button class="quiz__start-btn">Start Quiz</button>
                     <button class="highscore-btn">Highscores</button>
                 </article>
-                <article class="highscore-container">
+                <article class="highscore-container hidden">
                     <i class="fas fa-crown"></i>
                     <div class="highscore-output"></div>
                 </article>
