media queries + default banner

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     </header>
 
     <main id="main-content-container">
-         <section class="banner-container">           
+         <section class="banner-container">   
+             <div class="home-banner">
+                 <h1 class="">Knowledge<span class="initials">ME</span></h1>
+             </div>   
         </section>
 
         <content-tabs></content-tabs>
@@ -46,6 +49,12 @@
 
         
         <section id="content-output">
+            <article class="welcome-msg">
+                <h2>Lær mer og test din kunnskap</h2>
+                <p>Fordyp deg om våre utvalgte temaer og se hvor langt dine ferdigheter strekker med vår quiz</p>
+                <p>Føler deg klar allerede?</p>
+                <a class="direct-btn" href="quiz.html">Gå til quiz</a>
+            </article>
         </section>
 
 
