--- a/quiz.html
+++ b/quiz.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <script defer src="/scripts/main-navbar.js"></script>
     <script defer src="/scripts/quizStorage.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script defer src="/scripts/components/Quiz.js"></script>
     <script defer type="module" src="/scripts/quizGenerator.js"></script>
     <script defer type="module" src="/scripts/questionsData.js"></script>
@@ -70,7 +71,7 @@
                 </article>
                 <article class="highscore-container hidden">
                     <i class="fas fa-crown"></i>
-                    <div class="highscore-output"></div>
+                    <div class="highscore-output hidden"></div>
                 </article>
             </section>
             <section class="modal">
@@ -90,6 +91,10 @@
     <footer>
         
     </footer>
+    <script>
+      //  gsap.to(".highscore-output.li", {duration: 10, ease: "bounce.out", y: 0 })
+        
+    </script>
     <script src="scripts/components/Card.js"></script>
     <script src="scripts/components/Banner.js"></script>
     <script defer type="module" src="scripts/components/Tabs.js"></script>
