--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <article class="welcome-msg">
                 <h2>Lær mer og test din kunnskap</h2>
                 <p>Fordyp deg om våre utvalgte temaer og se hvor langt dine ferdigheter strekker med vår quiz</p>
+                <content-tabs></content-tabs>
                 <p>Føler deg klar allerede?</p>
                 <a class="direct-btn" href="quiz.html">Gå til quiz</a>
             </article>
@@ -64,6 +65,5 @@
     <script src="scripts/components/Banner.js"></script>
     <script type="module" src="scripts/components/Tabs.js"></script>
     <script src="scripts/components/Card.js"></script>
-    <script src="scripts/animations.js"></script>
 </body>
 </html>
