highscore list update

--- a/quiz.html
+++ b/quiz.html
@@ -63,8 +63,9 @@
                     <button class="highscore-btn">Highscores</button>
                 </article>
                 <article class="highscore-container">
-                    <i class="fas fa-crown"></i>
-                    <div class="highscore-output hidden"></div>
+                    <div class="highscore-output hidden">
+                        
+                    </div>
                 </article>
             </section>
 
