--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a class="navbar__link" href="index.html"><i class="navbar__link-icon fas fa-home"></i>Hjem</a>
             </li>
             <li>
-                <a class="navbar__link" href="quiz.html"><i class="navbar__link-icon fas fa-shopping-cart"></i>Quiz</a>
+                <a class="navbar__link" href="quiz.html"><i class="navbar__link-icon fas fa-brain"></i>Quiz</a>
             </li>
         </ul>
     </nav>
@@ -39,6 +39,7 @@
         <content-tabs></content-tabs>
 
         <section class="content-header">
+            <a class="direct-btn" href="quiz.html">Gå til quiz</a>
             <section class="content-filters">
                 <select name="filter-select" id="filter-select">
                 </select>
