--- a/quiz.html
+++ b/quiz.html
@@ -27,7 +27,7 @@
                     <a class="navbar__link" href="index.html"><i class="navbar__link-icon fas fa-home"></i>Hjem</a>
                 </li>
                 <li>
-                    <a class="navbar__link" href="quiz.html"><i class="navbar__link-icon fas fa-shopping-cart"></i>Quiz</a>
+                    <a class="navbar__link" href="quiz.html"><i class="navbar__link-icon fas fa-brain"></i>Quiz</a>
                 </li>
             </ul>
         </nav>
