--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <content-tabs></content-tabs>
 
         <section class="content-header">
-            <a class="direct-btn" href="quiz.html">Gå til quiz</a>
+            <a class="btn" href="quiz.html">Gå til quiz</a>
             <section class="content-filters">
                 <select name="filter-select" id="filter-select">
                 </select>
@@ -55,7 +55,7 @@
                 <p>Fordyp deg om våre utvalgte temaer og se hvor langt dine ferdigheter strekker med vår quiz</p>
                 <content-tabs></content-tabs>
                 <p>Føler deg klar allerede?</p>
-                <a class="direct-btn" href="quiz.html">Gå til quiz</a>
+                <a class="btn" href="quiz.html">Gå til quiz</a>
             </article>
         </section>
 
