--- a/quiz.html
+++ b/quiz.html
@@ -59,8 +59,8 @@
 
                 <article class="quiz__box">
                     <h3 class="quiz__header">Test dine ferdigheter</h3>
-                    <button class="quiz__start-btn">Start Quiz</button>
-                    <button class="highscore-btn">Highscores</button>
+                    <button class="quiz__start-btn btn">Start Quiz</button>
+                    <button class="highscore-btn btn">Highscores</button>
                 </article>
                 <article class="highscore-container">
                     <div class="highscore-output hidden">
