--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
 
         
         <section id="content-output">
-            <article class="welcome-msg">
+            <article class="info-container">
                 <h2>Lær mer og test din kunnskap</h2>
                 <p>Fordyp deg om våre utvalgte temaer og se hvor langt dine ferdigheter strekker med vår quiz</p>
-                <content-tabs></content-tabs>
+                <div class="tabs-container">
+                    <content-tabs></content-tabs>
+                </div>
                 <p>Føler deg klar allerede?</p>
                 <a class="btn" href="quiz.html">Gå til quiz</a>
             </article>
